--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
-h1 {
+body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: rgb(191, 255, 250);
 }
+
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .navbut:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .active {
+    background-color: #aa9104;
+    color: white;
+  }
