--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: rgb(191, 255, 250);
+    margin:0;
 }
 
 ul {
@@ -9,6 +10,9 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 li {
@@ -23,10 +27,10 @@ li a {
   text-decoration: none;
 }
 
-li a:hover {
+li a:hover:not(.active) {
   background-color: #111;
 }
 
-li a.active {
-  background-color: burlywood;
+.active {
+  background-color: #04AA6D;
 }
