--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,10 @@
 body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  background-color: rgb(191, 255, 250);
+  /* background-color: rgb(0, 0, 0); */
+  background-image: url("styles/assets/background.gif");
   margin:0;
+  height: 100vh;
+  padding:0;
 }
 
 ul {
@@ -33,4 +36,13 @@ background-color: #111;
 
 .active {
 background-color: #04AA6D;
+}
+
+.title {
+  font-size: 75px;
+  margin: 0px;
+}
+
+.header {
+  
 }
