--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   /* background-color: rgb(0, 0, 0); */
-  background-image: url("styles/assets/background.gif");
   margin:0;
   height: 100vh;
   padding:0;
@@ -44,5 +43,78 @@ background-color: #04AA6D;
 }
 
 .header {
-  
+  background-image: url("assets/background.gif");
+  background-size: cover;
+  height: 100vh;
+}
+
+.center {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.center0 {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.center1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.center2 {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.center3 {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.homebutton {
+  border-radius: 15%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: rgb(0, 0, 0);
+  transition-duration: 0.4s;
+  font-size: 40px;
+  color: black; 
+  border: 2px solid rgb(0, 0, 0);
+}
+.homebutton:hover {
+  color: gray;
+}
+
+.projects {
+  background-color: black;
+  position: absolute;
+  top: 53%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.project {
+  margin: 5px 100px;
+}
+
+.projectbutton {
+  border-radius: 15%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: rgb(32, 32, 32);
+  transition-duration: 0.4s;
+  font-size: 25px;
+  color: black; 
+  border: 2px solid rgb(0, 0, 0);
+}
+.projectbutton:hover {
+  background-color: black;
+}
+.projectgif {
+  width: 50%;
+  height: auto;
 }
