Expanded on some project descriptions, and changed a class name.

--- a/styles/style.css
+++ b/styles/style.css
@@ -124,7 +124,7 @@ background-color: #04AA6D;
 .projectbutton:hover {
   background-color: black;
 }
-.projectgif {
+.projectimg {
   width: 50%;
   height: auto;
 }
